deploy/prod/booking-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-api
  namespace: prod
  labels:
    app: booking-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: booking-api
  template:
    metadata:
      labels:
        app: booking-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - booking-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: booking-api
        image: fcavarzare/projeto-reserva:booking-api-latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: booking-api-service
  namespace: prod
spec:
  selector:
    app: booking-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
